--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=/api
-VITE_SIGNALR_URL=/hubs
+VITE_API_URL=https://largest-leena-nonlustrously.ngrok-free.dev/api
+VITE_SIGNALR_URL=https://largest-leena-nonlustrously.ngrok-free.dev/hubs
