--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_API_URL=https://largest-leena-nonlustrously.ngrok-free.dev/api
-VITE_SIGNALR_URL=https://largest-leena-nonlustrously.ngrok-free.dev/hubs
+VITE_API_URL=http://10.218.171.40:5101/api
+VITE_SIGNALR_URL=http://10.218.171.40:5101/hubs
